package rename, upload entity added, user api getUsers
